# AI_Gen_Novel_Style_RAG

./: .gitignore  01_rag_style_learning.md  README.md  TUTORIAL.md  VENV_ACTIVATION.md  add_files.py  check_status.py  create_index.py  export_index.py  import_index.py  model_config.py.example  pyproject.toml  query_index.py  requirements.txt  reset_index.py  run.py  start_server.py
docs/: DEVELOPER_INTEGRATION.md  SYSTEM_DOCUMENTATION.md
examples/: basic_usage.py
style_rag/: __init__.py
style_rag/api/: __init__.py  client.py  server.py
style_rag/cli/: __init__.py  index_articles.py  query.py
style_rag/core/: __init__.py  chunker.py  config.py  embedding_config.py  embeddings.py  vector_store.py
style_rag/indexing/: __init__.py  article_loader.py  index_manager.py  preprocessor.py
style_rag/retrieval/: __init__.py  query_builder.py  reranker.py  retriever.py
test/: test_rag.py  test_retrieval.py
